# PhaseMap

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .travis.yml  LICENSE.txt  README.md  clean.sh  mypy.ini  phase_finder.py  phasemap.py  pyproject.toml  setup.cfg  setup.py  test.py
.cache/v/test_simple/: test_3d[phase0-True-limits0-False-0]with_encoding  test_3d[phase0-True-limits0-False-1]with_encoding  test_3d[phase0-True-limits0-False-2]with_encoding  test_3d[phase0-True-limits0-True-0]  test_3d[phase0-True-limits0-True-0]with_encoding  test_3d[phase0-True-limits0-True-1]  test_3d[phase0-True-limits0-True-1]with_encoding  test_3d[phase0-True-limits0-True-2]with_encoding  test_phase[2]  test_phase[3]  test_phase[False-3]  test_phase[True-2]  test_phase[phase0-True-False-2]  test_phase[phase0-True-False-4]  test_phase[phase0-True-limits0-False-0]  test_phase[phase0-True-limits0-False-1]with_encoding  test_phase[phase0-True-limits0-False-2]with_encoding  test_phase[phase0-True-limits0-False-3]with_encoding  test_phase[phase0-True-limits0-False-4]with_encoding  test_phase[phase0-True-limits0-True-1]with_encoding  test_phase[phase0-True-limits0-True-2]with_encoding  test_phase[phase0-True-limits0-True-3]with_encoding  test_phase[phase0-True-limits0-True-4]  test_phase[phase0-True-limits0-True-4]with_encoding  test_phase[phase1-False-False-2]  test_phase[phase1-False-False-3]  test_phase[phase1-False-False-4]  test_phase[phase1-False-True-2]  test_phase[phase1-False-True-3]  test_phase[phase1-False-True-4]  test_phase[phase1-False-limits1-False-0]with_encoding  test_phase[phase1-False-limits1-False-1]with_encoding  test_phase[phase1-False-limits1-False-2]with_encoding  test_phase[phase1-False-limits1-False-3]with_encoding  test_phase[phase1-False-limits1-False-4]  (+15 more)
.travis-data/: install_script.sh  test_script.sh
doc/: Makefile  config_fallback.mk  requirements_for_rtd.txt
doc/source/: conf.py  examples.rst  index.rst  reference.rst  tutorial.rst
examples/hypersphere/: run.py
examples/pathological_phase/: .gitignore  run.py
examples/toy_phase/: .gitignore  create_video.py  run.py
logo/: logo_on_black.xcf  logo_on_white.xcf  logo_square_on_black.xcf  logo_square_on_white.xcf  test.py
phasemap/: __init__.py  _async_savable.py  _box.py  _cache.py  _container.py  _coordinate.py  _data_point_cache.py  _logging_setup.py  _phasemap.py  _result.py  _run.py  _square.py  _version.py  plot.py
phasemap/io/: __init__.py  _encoding.py  _save_load.py
phasemap2/: __init__.py  _container.py  _containers.py  _logging_setup.py  _run.py
phasemap2/io/: __init__.py  _encoding.py
phasemap_old/: _containers.py  _logging_setup.py  _version.py
phasemap_old/io/: _save_load.py
playground/: plot.py  test.py  test2.py
tests/: conftest.py  coverage.sh  phases.py  plottest_helpers.py  test_data_point_cache.py  test_doc.py  test_func_cache.py  test_plot.py  test_run.py  test_save_load.py  test_simple.py
tests/samples/: res.json
(+92 files in other folders)
