[metadata]
name = phasemap
author = Dominik Gresch
author_email = greschd@gmx.ch
version = attr: phasemap.__version__
url = https://phasemap.greschd.ch
description = An algorithm for calculating phase diagrams.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    phase
    map
    diagram
    scaling
license = Apache 2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    Development Status :: 5 - Production/Stable

[options]
python_requires = >=3.6
install_requires =
    numpy
    matplotlib
    decorator
    fsc.export
    fsc.iohelper>=1.0.2
    fsc.async-tools
packages = find:

[options.extras_require]
dev =
    black==20.8b1
    pre-commit==2.7.1
    pylint==2.6.0
    isort==5.5.1
    mypy==0.782
    pytest>=4.6
    pytest-cov
    msgpack
    sphinx
    sphinx-rtd-theme
    ipython>=7.10

[options.package_data]
phasemap = py.typed
